tests/errors/missing_arg.HC
//ERR: missing argument 2 ('j') and no default value
U0 Test(I64 i=4,I64 j,I64 k=5) { "%d %d %d\n",i,j,k; }
Test;
